docs: update SideroLinkConfig example
The provided example wasn't valid, it should not have a path component.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/pkg/machinery/config/types/siderolink/testdata/document.yaml
+++ b/pkg/machinery/config/types/siderolink/testdata/document.yaml
@@ -1,3 +1,3 @@
 apiVersion: v1alpha1
 kind: SideroLinkConfig
-apiUrl: https://siderolink.api/join?jointoken=secret&user=alice
+apiUrl: https://siderolink.api/?jointoken=secret&user=alice
