--- a/.github/workflows/integration-qemu-csi-rook-ceph-cron.yaml
+++ b/.github/workflows/integration-qemu-csi-rook-ceph-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-01-16T11:00:37Z by kres 3b3f992.
+# Generated on 2025-01-21T10:29:14Z by kres 3075de9.
 
 name: integration-qemu-csi-rook-ceph-cron
 concurrency:
@@ -93,6 +93,13 @@ jobs:
         run: |
           sudo -E make e2e-qemu
       - name: save artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: fio-integration-qemu-csi-rook-ceph
+          path: |
+            /tmp/fio-*.json
+          retention-days: "180"
+      - name: save artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -100,5 +107,4 @@ jobs:
           path: |-
             /tmp/logs-*.tar.gz
             /tmp/support-*.zip
-            /tmp/fio-*.json
           retention-days: "5"
