--- a/hack/test/patches/longhorn-cp.yaml
+++ b/hack/test/patches/longhorn-cp.yaml
@@ -6,4 +6,4 @@ cluster:
         configuration:
           exemptions:
             namespaces:
-              - openebs
+              - longhorn-system
