--- a/hack/test/patches/longhorn.yaml
+++ b/hack/test/patches/longhorn.yaml
@@ -1,4 +1,12 @@
+---
 machine:
+  sysctls:
+    vm.nr_hugepages: "1024"
+  kernel:
+    modules:
+      - name: nvme_tcp
+      - name: vfio_pci
+      - name: uio_pci_generic
   kubelet:
     extraMounts:
       - destination: /var/lib/longhorn
@@ -8,11 +16,3 @@ machine:
           - bind
           - rshared
           - rw
-cluster:
-  apiServer:
-    admissionControl:
-      - name: PodSecurity
-        configuration:
-          exemptions:
-            namespaces:
-              - longhorn-system
