--- a/.github/workflows/integration-qemu-csi-longhorn-cron.yaml
+++ b/.github/workflows/integration-qemu-csi-longhorn-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-01-21T10:29:14Z by kres 3075de9.
+# Generated on 2025-01-22T17:37:55Z by kres 3075de9.
 
 name: integration-qemu-csi-longhorn-cron
 concurrency:
@@ -112,10 +112,14 @@ jobs:
           EXTRA_TEST_ARGS: -talos.csi=longhorn
           GITHUB_STEP_NAME: ${{ github.job}}-e2e-qemu-csi-longhorn
           IMAGE_REGISTRY: registry.dev.siderolabs.io
-          QEMU_MEMORY_WORKERS: "3072"
+          QEMU_EXTRA_DISKS: "1"
+          QEMU_EXTRA_DISKS_DRIVERS: nvme
+          QEMU_EXTRA_DISKS_SIZE: "12288"
+          QEMU_MEMORY_WORKERS: "4096"
           QEMU_WORKERS: "3"
           SHORT_INTEGRATION_TEST: "yes"
-          WITH_CONFIG_PATCH: '@_out/installer-extensions-patch.yaml:@_out/kubelet-fat-patch.yaml:@hack/test/patches/longhorn.yaml'
+          WITH_CONFIG_PATCH_CONTROLPLANE: '@hack/test/patches/longhorn-cp.yaml'
+          WITH_CONFIG_PATCH_WORKER: '@_out/installer-extensions-patch.yaml:@_out/kubelet-fat-patch.yaml:@hack/test/patches/longhorn.yaml'
         run: |
           sudo -E make e2e-qemu
       - name: save artifacts
