--- a/.kres.yaml
+++ b/.kres.yaml
@@ -1352,7 +1352,7 @@ spec:
             QEMU_MEMORY_WORKERS: 8192
             QEMU_EXTRA_DISKS: 1
             QEMU_EXTRA_DISKS_SIZE: 12288
-            WITH_CONFIG_PATCH: "@hack/test/patches/rook-ceph.yaml"
+            WITH_CONFIG_PATCH_CONTROLPLANE: "@hack/test/patches/rook-ceph.yaml"
             EXTRA_TEST_ARGS: -talos.csi=rook-ceph
             IMAGE_REGISTRY: registry.dev.siderolabs.io
         - name: save-fio-benchmark
@@ -1441,8 +1441,12 @@ spec:
             GITHUB_STEP_NAME: ${{ github.job}}-e2e-qemu-csi-longhorn
             SHORT_INTEGRATION_TEST: yes
             QEMU_WORKERS: 3
-            QEMU_MEMORY_WORKERS: 3072
-            WITH_CONFIG_PATCH: "@_out/installer-extensions-patch.yaml:@_out/kubelet-fat-patch.yaml:@hack/test/patches/longhorn.yaml"
+            QEMU_MEMORY_WORKERS: 4096
+            QEMU_EXTRA_DISKS: 1
+            QEMU_EXTRA_DISKS_SIZE: 12288
+            QEMU_EXTRA_DISKS_DRIVERS: nvme
+            WITH_CONFIG_PATCH_CONTROLPLANE: "@hack/test/patches/longhorn-cp.yaml"
+            WITH_CONFIG_PATCH_WORKER: "@_out/installer-extensions-patch.yaml:@_out/kubelet-fat-patch.yaml:@hack/test/patches/longhorn.yaml"
             EXTRA_TEST_ARGS: -talos.csi=longhorn
             IMAGE_REGISTRY: registry.dev.siderolabs.io
         - name: save-fio-benchmark
@@ -1508,7 +1512,7 @@ spec:
             QEMU_MEMORY_WORKERS: 4096
             QEMU_EXTRA_DISKS: 1
             QEMU_EXTRA_DISKS_SIZE: 12288
-            WITH_CONFIG_PATCH: "@hack/test/patches/openebs-cp.yaml"
+            WITH_CONFIG_PATCH_CONTROLPLANE: "@hack/test/patches/openebs-cp.yaml"
             WITH_CONFIG_PATCH_WORKER: "@hack/test/patches/openebs.yaml"
             EXTRA_TEST_ARGS: -talos.csi=openebs
             IMAGE_REGISTRY: registry.dev.siderolabs.io
