feat: update etcd to 3.5.18
See https://github.com/etcd-io/etcd/blob/main/CHANGELOG/CHANGELOG-3.5.md

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit 83d007c161e03311cede2153f35c32f608537290)

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -20,6 +20,7 @@ preface = """
         description = """\
 * Linux: 6.12.11
 * Kubernetes: 1.23.1
+* etcd: 3.5.18
 
 Talos is built with Go 1.23.5.
 """
