--- a/.github/workflows/integration-misc-1-cron.yaml
+++ b/.github/workflows/integration-misc-1-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-12-24T15:00:58Z by kres fcff05e.
+# Generated on 2025-01-15T12:49:27Z by kres 3b3f992.
 
 name: integration-misc-1-cron
 concurrency:
@@ -92,6 +92,7 @@ jobs:
           IMAGE_REGISTRY: registry.dev.siderolabs.io\
           SHORT_INTEGRATION_TEST: "yes"
           WITH_CLUSTER_DISCOVERY: "true"
+          WITH_CONFIG_PATCH: '@hack/test/patches/kubespan-rp_filter.yaml'
           WITH_KUBESPAN: "true"
         run: |
           sudo -E make e2e-qemu
