fix: use local NTP for AWS platform
Fixes #10245

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/aws/testdata/expected.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/aws/testdata/expected.yaml
@@ -6,7 +6,11 @@ hostnames:
       domainname: ""
       layer: platform
 resolvers: []
-timeServers: []
+timeServers:
+    - timeServers:
+        - 169.254.169.123
+        - fd00:ec2::123
+      layer: platform
 operators: []
 externalIPs:
     - 1.2.3.4
