--- a/hack/release.toml
+++ b/hack/release.toml
@@ -119,6 +119,12 @@ This also changes Talos root filesystem structure for unified /usr, with other d
 System extensions must move their directories accordingly for 1.10.
 """
 
+    [notes.ingress-firewall]
+        title = "Ingress Firewall"
+        description = """\
+Talos Ingress Firewall now filters access to Kubernetes NodePort services correctly.
+"""
+
 [make_deps]
 
     [make_deps.tools]
