--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-01-24T14:30:35Z by kres 3075de9.
+# Generated on 2025-02-15T06:21:12Z by kres 8a48729.
 
 name: default
 concurrency:
@@ -1936,6 +1936,13 @@ jobs:
         if: github.event_name == 'schedule'
         run: |
           make talosctl-cni-bundle
+      - name: image-metal-uki
+        if: github.event_name == 'schedule'
+        env:
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          PLATFORM: linux/amd64
+        run: |
+          make image-metal-uki
       - name: e2e-firewall
         env:
           GITHUB_STEP_NAME: ${{ github.job}}-e2e-firewall
@@ -2184,6 +2191,12 @@ jobs:
         if: github.event_name == 'schedule'
         run: |
           make talosctl-cni-bundle
+      - name: iso
+        if: github.event_name == 'schedule'
+        env:
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+        run: |
+          make iso
       - name: images-essential
         if: github.event_name == 'schedule'
         env:
