--- a/.github/workflows/integration-misc-2-cron.yaml
+++ b/.github/workflows/integration-misc-2-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-01-24T14:30:35Z by kres 3075de9.
+# Generated on 2025-02-15T06:21:12Z by kres 8a48729.
 
 name: integration-misc-2-cron
 concurrency:
@@ -84,6 +84,12 @@ jobs:
         if: github.event_name == 'schedule'
         run: |
           make talosctl-cni-bundle
+      - name: iso
+        if: github.event_name == 'schedule'
+        env:
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+        run: |
+          make iso
       - name: images-essential
         if: github.event_name == 'schedule'
         env:
